# voice-agent

./: .dockerignore  .gitignore  Dockerfile  config.yaml  pyproject.toml  taskfile.yaml
src/: agent.py  agent2.py  agent3.py  agent4.py  agent5.py  assistant.py  config.py  custom_call.py  customer.json  end_agent.py  entrypoint.py  evaluation.py  finonest_ucl_training.docx  frontend.py  gradio.py  helpers.py  instructions.py  instructions.txt  knowledge_document.py  log_usage.py  metrics.py  multiagent.py  refined_telecall.json  refined_telecall.txt  server.py  server_old.py  setup_tts_stt.py  sip_call_tata.py  sip_calls.py  telecall.txt  telecalling3.txt  usage_tracker.py
src/class_mod/: assistant.py  assistant_helpers.py  ns_agentsession.py  summary.py  tts_utils.py
src/costs/: llm.json  stt.json  tts.json
src/experimental/: pipecat_agent.py  sus_agent.py
src/helpers/: config.py  customer_helper.py  entrypoint.py  helpers.py  log_usage.py  metrics.py  setup_session.py  setup_tts_stt.py  usage_tracker.py
src/helpers/logs/: sarvam_anushka_deepgram_session_eaa7c2f1-548a-404d-be46-0c11736cbf12.json
src/logs/: inst 3.json  inst 4.json  sarvam_anushka_deepgram_session_5267c962-b676-456e-a524-dbb982ad5ea1.json  sarvam_anushka_deepgram_session_6ea3aab7-1fb5-447e-a7a6-5ec30fcb9a4e.json  sarvam_anushka_deepgram_session_d0e0c216-2f30-4dca-a0f2-663f310c3bf1.json  sarvam_anushka_deepgram_session_dac2ae98-b71e-431d-ab48-0d6c862b7573.json
tests/: test_agent.py
