[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10,<4.0"

dependencies = [
    "asyncio>=4.0.0",
    "dataclasses>=0.8",
    "google-cloud-storage>=3.4.0",
    "google-genai>=1.32.0",
    "livekit-agents[aws,cartesia,deepgram,google,groq,lmnt,openai,playai,resemble,sarvam,silero,speechify,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "loguru>=0.7.3",
    "numpy>=2.0.2",
    "pathlib>=1.0.1",
    "pipecat-ai==0.0.79",
    "pydub>=0.25.1",
    "pyrnnoise>=0.3.8",
    "python-docx>=1.2.0",
    "python-dotenv",
    "ragas>=0.3.5",
    "sacrebleu>=2.5.1",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
    "uuid>=1.30",
    "wavio>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
